# cgt-wasm

./: .clang-format  .gitignore  CMakeLists.txt  PD.cpp  PD.h  README.md  common.cpp  common.h  main.cpp  r_coalition.txt
lib/: CMakeLists.txt  common.h  nucleolus.cpp  nucleolus.h
lib/include/: bnf.h  common.h  group.h  nucleolus.h  ordinal_shapley.h  primal_dual.h  shapley.h
lib/src/: bnf.cpp  common.cpp  nucleolus.cpp  ordinal_shapley.cpp  primal_dual.cpp
module/: CMakeLists.txt
module/include/: bnf_module.h  cgt_module.h
module/src/: bnf_module.cpp  cgt_module.cpp  nucleolus_module.cpp
public/: index.html  tests.js  tests.wasm
test/: CMakeLists.txt
test/files/: games.json  games_iea.json
test/include/: cgt_test.h  doctest.h  games.h  gen_game.h  nucleolus_test.h  test_games.h
test/src/: gen_game.cpp  iea_nucleolus_test.cpp  main_test.cpp  nucleolus_test.cpp  ordinal_shapley_test.cpp
tests/: nucleolusTest.cpp
